--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "issues":"https://github.com/heimrichhannot/contao-member_content_archives/issues"
     },
     "require": {
-        "contao/core": ">=3.2,<4-dev",
-        "heimrichhannot/contao-tagsinput": ">=1.0.9"
+        "contao/core": ">=3.2,<4-dev"
     },
     "autoload": {
         "classmap": [""]
